Modified project settings

--- a/project.config
+++ b/project.config
@@ -21,3 +21,9 @@
 	push = +force group user/Samuel Littley (toastwaffle)
 	pushTag = group user/Samuel Littley (toastwaffle)
 	pushSignedTag = group user/Samuel Littley (toastwaffle)
+[receive]
+	requireChangeId = true
+	createNewChangeForAllNotInTarget = true
+[submit]
+	action = rebase if necessary
+	mergeContent = true
