Modify access rules

--- a/project.config
+++ b/project.config
@@ -5,9 +5,12 @@
 [access "refs/*"]
 	owner = group user/Samuel Littley (toastwaffle)
 [access "refs/for/refs/*"]
+	read = group keble_ball_team
 	read = group user/Samuel Littley (toastwaffle)
+	push = group keble_ball_team
 	push = group user/Samuel Littley (toastwaffle)
 	label-Code-Review = -2..+2 group user/Samuel Littley (toastwaffle)
+	label-Code-Review = -1..+1 group keble_ball_team
 	label-Verified = -1..+1 group user/Samuel Littley (toastwaffle)
 	rebase = group user/Samuel Littley (toastwaffle)
 	removeReviewer = group user/Samuel Littley (toastwaffle)
@@ -27,3 +30,5 @@
 [submit]
 	action = rebase if necessary
 	mergeContent = true
+[access "refs/heads/lint"]
+	push = group keble_ball_team
