Modify access rules

--- a/project.config
+++ b/project.config
@@ -9,10 +9,13 @@
 	read = group user/Samuel Littley (toastwaffle)
 	push = group keble_ball_team
 	push = group user/Samuel Littley (toastwaffle)
+	label-Code-Review = -2..-2 group keble_ball_team
 	label-Code-Review = -2..+2 group user/Samuel Littley (toastwaffle)
-	label-Code-Review = -1..+1 group keble_ball_team
+	label-Verified = -1..+1 group keble_ball_team
 	label-Verified = -1..+1 group user/Samuel Littley (toastwaffle)
+	rebase = group keble_ball_team
 	rebase = group user/Samuel Littley (toastwaffle)
+	removeReviewer = group keble_ball_team
 	removeReviewer = group user/Samuel Littley (toastwaffle)
 	submit = group user/Samuel Littley (toastwaffle)
 [access "refs/heads/*"]
