Grant all permissions to the whole team

--- a/project.config
+++ b/project.config
@@ -3,13 +3,14 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
+	owner = group keble_ball_team
 	owner = group user/Samuel Littley (toastwaffle)
 [access "refs/for/refs/*"]
 	read = group keble_ball_team
 	read = group user/Samuel Littley (toastwaffle)
 	push = group keble_ball_team
 	push = group user/Samuel Littley (toastwaffle)
-	label-Code-Review = -2..-2 group keble_ball_team
+	label-Code-Review = -2..+2 group keble_ball_team
 	label-Code-Review = -2..+2 group user/Samuel Littley (toastwaffle)
 	label-Verified = -1..+1 group keble_ball_team
 	label-Verified = -1..+1 group user/Samuel Littley (toastwaffle)
@@ -17,15 +18,23 @@
 	rebase = group user/Samuel Littley (toastwaffle)
 	removeReviewer = group keble_ball_team
 	removeReviewer = group user/Samuel Littley (toastwaffle)
+	submit = group keble_ball_team
 	submit = group user/Samuel Littley (toastwaffle)
 [access "refs/heads/*"]
+	read = group keble_ball_team
 	read = group user/Samuel Littley (toastwaffle)
+	create = group keble_ball_team
 	create = group user/Samuel Littley (toastwaffle)
+	push = group keble_ball_team
 	push = +force group user/Samuel Littley (toastwaffle)
+	pushMerge = group keble_ball_team
 	pushMerge = group user/Samuel Littley (toastwaffle)
 [access "refs/tags/*"]
+	push = group keble_ball_team
 	push = +force group user/Samuel Littley (toastwaffle)
+	pushTag = group keble_ball_team
 	pushTag = group user/Samuel Littley (toastwaffle)
+	pushSignedTag = group keble_ball_team
 	pushSignedTag = group user/Samuel Littley (toastwaffle)
 [receive]
 	requireChangeId = true
@@ -33,5 +42,3 @@
 [submit]
 	action = rebase if necessary
 	mergeContent = true
-[access "refs/heads/lint"]
-	push = group keble_ball_team
